Added TextStyling for scala / SBt interpreter